--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -1,7 +1,10 @@
+/* nav style  */
 .nav a:hover{
 background-color:slategrey;
 cursor:pointer;
 }
+
+/* banner img style  */
 .banner-img{
     width: 10%;
 }
